[Devtools] Fixed resource having no content if from xhr blob

Offending patch: https://codereview.chromium.org/2460573002/

In the event that a resource is an xhr request and the data had been
saved to a file and had an error code in the header it was not showing
any content uppon request for body.

R=dgozman,caseq
BUG=687677,659789

Review-Url: https://codereview.chromium.org/2848353003
Cr-Commit-Position: refs/heads/master@{#468827}