third_party/WebKit/LayoutTests/http/tests/inspector-protocol/resources/cors-data.php
@@ -1,0 +1,10 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<?php
+ob_start();
+header('Access-Control-Allow-Headers: origin, content-type, accept, authorization');
+header('Access-Control-Allow-Methods: GET, POST, PUT, PATCH, DELETE, OPTIONS, HEAD');
+header('Access-Control-Allow-Origin: *');
+if ($_SERVER['REQUEST_METHOD'] == 'OPTIONS')
+  exit;
+
+echo 'Some content';
